Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-22 20:04+0200\n"
+"PO-Revision-Date: 2011-08-22 20:05+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1460,7 +1460,7 @@ msgstr "Diforc'herezh"
 #: js/messages.php:160
 #, php-format
 msgid "Divided by %s:"
-msgstr ""
+msgstr "Rannet dre %s:"
 
 #: js/messages.php:162
 msgid "From slow log"
