--- a/po/br.po
+++ b/po/br.po
@@ -1464,7 +1464,7 @@ msgstr "Rannet dre %s:"
 
 #: js/messages.php:162
 msgid "From slow log"
-msgstr ""
+msgstr "Diwar ar marilh rekedoù gorrek"
 
 #: js/messages.php:163
 msgid "From general log"
