--- a/po/br.po
+++ b/po/br.po
@@ -1468,7 +1468,7 @@ msgstr "Diwar ar marilh rekedoù gorrek"
 
 #: js/messages.php:163
 msgid "From general log"
-msgstr ""
+msgstr "Diwar ar marilh hollek"
 
 #: js/messages.php:164
 msgid "Analysing & loading logs. This may take a while."
