Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-22 20:06+0200\n"
+"PO-Revision-Date: 2011-08-22 20:07+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1493,10 +1493,9 @@ msgid "Log data loaded. Queries executed in this time span:"
 msgstr "Restr varilh karget. Rekedoù kaset da benn en amzer-mañ :"
 
 #: js/messages.php:169
-#, fuzzy
 #| msgid "Jump to database"
 msgid "Jump to Log table"
-msgstr "Mont d'an diaz roadennoù"
+msgstr "Mont da taolenn ar marilh"
 
 #: js/messages.php:170
 msgid "Log analysed, but no data found in this time span."
