--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-22 20:07+0200\n"
+"PO-Revision-Date: 2011-08-22 20:08+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1510,10 +1510,11 @@ msgstr ""
 msgid "Log table filter options"
 msgstr "Dibarzhioù diskwel an taolennoù"
 
+# verb pe ak. ?
 #. l10n: Filter as in "Start Filtering"
 #: js/messages.php:175
 msgid "Filter"
-msgstr "Sil"
+msgstr "Silañ"
 
 #: js/messages.php:176
 msgid "Filter queries by word/regexp:"
