Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -1530,10 +1530,9 @@ msgid "Sum of grouped rows:"
 msgstr "Sammad al linennoù bodet :"
 
 #: js/messages.php:179
-#, fuzzy
 #| msgid "Total"
 msgid "Total:"
-msgstr "Hollad"
+msgstr "Hollad :"
 
 #: js/messages.php:181
 #, fuzzy
