--- a/po/es.po
+++ b/po/es.po
@@ -1777,7 +1777,7 @@ msgstr "Utilice la rueda de desplazamiento para ampliar o reducir el gráfico."
 
 #: js/messages.php:270
 msgid "Click and drag the mouse to navigate the plot."
-msgstr ""
+msgstr "Pulse y arrastre para navegar el gráfico."
 
 #: js/messages.php:272
 msgid "Click reset zoom link to come back to original state."
