--- a/po/es.po
+++ b/po/es.po
@@ -12152,7 +12152,6 @@ msgid "Suboptimal caching method."
 msgstr "Método de caché sub-óptimo."
 
 #: po/advisory_rules.php:72
-#, fuzzy
 #| msgid ""
 #| "You are using the MySQL Query cache with a fairly high traffic database. "
 #| "It might be worth considering to use <a href=\\\"http://dev.mysql.com/doc/"
@@ -12165,9 +12164,10 @@ msgid ""
 "cache, especially if you have multiple slaves."
 msgstr ""
 "Está utilizando el caché de consultas MySQL en una base de datos de bastante "
-"tráfico. Probablemente quiera considerar utilizar <a href=\\\"http://dev."
-"mysql.com/doc/refman/5.1/en/ha-memcached.html\\\">memcached</a> en lugar del "
-"caché de consultas de MySQL, especialmente si tiene muchos esclavos."
+"tráfico. Probablemente quiera considerar utilizar <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.5/en/ha-"
+"memcached.html\\\">memcached</a> en lugar del caché de consultas de MySQL, "
+"especialmente si tiene muchos esclavos."
 
 #: po/advisory_rules.php:73
 #, php-format
