--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-22 22:00+0200\n"
+"PO-Revision-Date: 2011-08-22 22:01+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12592,7 +12592,6 @@ msgid "Temp disk rate"
 msgstr "Tasa de tablas temporales en el disco"
 
 #: po/advisory_rules.php:152
-#, fuzzy
 #| msgid ""
 #| "Increasing {max_heap_table_size} and {tmp_table_size} might help. However "
 #| "some temporary tables are always being written to disk, independent of "
@@ -12615,9 +12614,9 @@ msgstr ""
 "independientemente del valor de estas variables. Para eliminarlas deberá re-"
 "escribir las consultas para evitar estas condiciones (en una tabla temporal: "
 "la presencia de una columna «BLOB» o «TEXT», o la presencia de una columna "
-"mayor a 512 bytes) como se menciona en la <a href=\\\"http://dev.mysql.com/"
-"doc/refman/5.0/en/internal-temporary-tables.html\\\">documentación de MySQL</"
-"a>"
+"mayor a 512 bytes) como se menciona en la <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.5/en/internal-temporary-"
+"tables.html\\\">documentación de MySQL</a>"
 
 #: po/advisory_rules.php:153
 #, php-format
