--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-22 22:51+0200\n"
+"PO-Revision-Date: 2011-08-22 22:52+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11955,10 +11955,9 @@ msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr "query_cache_size 0'a ayarlı veya query_cache_type 'OFF'a ayarlı"
 
 #: po/advisory_rules.php:70
-#, fuzzy
 #| msgid "Query cache used"
 msgid "Query caching method"
-msgstr "Kullanılan sorgu önbelleği"
+msgstr "Sorgu önbellekleme yöntemi"
 
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
