Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-22 22:54+0200\n"
+"PO-Revision-Date: 2011-08-22 22:55+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12925,7 +12925,6 @@ msgid "Enable concurrent_insert by setting it to 1"
 msgstr "concurrent_insert'ü 1'e ayarlayarak bunu etkinleştirin"
 
 #: po/advisory_rules.php:267
-#, fuzzy
 #| msgid ""
 #| "Setting {concurrent_insert} to 1 reduces contention between readers and "
 #| "writers for a given table. See also <a href=\\\"http://dev.mysql.com/doc/"
@@ -12936,9 +12935,9 @@ msgid ""
 "refman/5.5/en/concurrent-inserts.html\\\">MySQL Documentation</a>"
 msgstr ""
 "{concurrent_insert} 1'e ayarlamak verilen bir tablo için okuyucular ve "
-"yazıcılar arasındaki bağlantıyı azaltır. Aynı zamanda <a href=\\\"http://dev."
-"mysql.com/doc/refman/5.0/en/concurrent-inserts.html\\\">MySQL Belgesine</a> "
-"bakın"
+"yazıcılar arasındaki bağlantıyı azaltır. Aynı zamanda <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.5/en/concurrent-"
+"inserts.html\\\">MySQL Belgesine</a> bakın"
 
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
