Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -864,7 +864,7 @@ msgstr "Χρήση του OpenStreetMaps ως Βασικό Επίπεδο"
 
 #: gis_data_editor.php:134
 msgid "SRID"
-msgstr ""
+msgstr "SRID"
 
 #: gis_data_editor.php:151 js/messages.php:291
 #: libraries/display_tbl.lib.php:665
