Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -888,10 +888,9 @@ msgstr "Υ"
 
 #: gis_data_editor.php:202 gis_data_editor.php:246 gis_data_editor.php:296
 #: js/messages.php:294
-#, fuzzy
 #| msgid "Add routine"
 msgid "Add a point"
-msgstr "Προσθήκη ρουτίνας"
+msgstr "Προσθήκη σημείου"
 
 #: gis_data_editor.php:218 js/messages.php:289
 #, fuzzy
