Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -899,7 +899,7 @@ msgstr "Κείμενο γραμμής"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
-msgstr ""
+msgstr "Εξωτερικός δακτύλιος"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:292
 msgid "Inner Ring"
