--- a/po/el.po
+++ b/po/el.po
@@ -911,10 +911,9 @@ msgid "Add a linestring"
 msgstr "Προσθήκη κειμένου γραμμής"
 
 #: gis_data_editor.php:248 gis_data_editor.php:298 js/messages.php:295
-#, fuzzy
 #| msgid "Add a new User"
 msgid "Add an inner ring"
-msgstr "Προσθήκη νέου Χρήστη"
+msgstr "Προσθήκη εσωτερικού δακτυλίου"
 
 #: gis_data_editor.php:262 js/messages.php:290
 msgid "Polygon"
