--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:06+0200\n"
+"PO-Revision-Date: 2011-08-23 08:07+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1216,10 +1216,9 @@ msgid "Query statistics"
 msgstr "Στατιστικά ερωτήματος"
 
 #: js/messages.php:93
-#, fuzzy
 #| msgid "Failed to read configuration file"
 msgid "Local monitor configuration incompatible"
-msgstr "Αδύνατη η ανάγνωση του αρχείου ρυθμίσεων"
+msgstr "Ασύμβατη η ρύθμιση τοπικής εποπτείας"
 
 #: js/messages.php:94
 msgid ""
