--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:07+0200\n"
+"PO-Revision-Date: 2011-08-23 08:10+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1227,6 +1227,11 @@ msgid ""
 "likely that your current configuration will not work anymore. Please reset "
 "your configuration to default in the <i>Settings</i> menu."
 msgstr ""
+"Η ρύθμιση ταξινόμησης διαγραμμάτων στον τοπικό χώρο αποθήκευσης των "
+"φυλλομετρητών σας δεν είναι πλέον συμβατός με τη νεότερη έκδοση του διαλόγου "
+"εποπτείας.Είναι πολύ πιθανό ότι η τρέχουσα ρύθμιση δεν θα λειτουργεί πλέον. "
+"Επαναφέρτε τις ρυθμίσεις σας στις προεπιλεγμένες στο μενού "
+"<i>Ρυθμίσεις</i>."
 
 #: js/messages.php:96
 #, fuzzy
