--- a/po/el.po
+++ b/po/el.po
@@ -1290,10 +1290,9 @@ msgid "Buffered memory"
 msgstr "Ρυθμισμένη μνήμη"
 
 #: js/messages.php:110
-#, fuzzy
 #| msgid "System memory"
 msgid "Free memory"
-msgstr "Μνήμη συστήματος"
+msgstr "Ελεύθερη μνήμη"
 
 #: js/messages.php:111
 #, fuzzy
