--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:12+0200\n"
+"PO-Revision-Date: 2011-08-23 08:13+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1300,10 +1300,9 @@ msgid "Used memory"
 msgstr "Χρησιμοποιημένη μνήμη"
 
 #: js/messages.php:113
-#, fuzzy
 #| msgid "Total"
 msgid "Total Swap"
-msgstr "Σύνολο"
+msgstr "Σύνολο Αδράνειας"
 
 #: js/messages.php:114
 msgid "Cached Swap"
