Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:15+0200\n"
+"PO-Revision-Date: 2011-08-23 08:16+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1494,7 +1494,6 @@ msgid "Analysing & loading logs. This may take a while."
 msgstr "Ανάλυση & φόρτωση καταγραφών. Αυτό ίσως διαρκέσει λίγο."
 
 #: js/messages.php:165
-#, fuzzy
 #| msgid ""
 #| "This columns shows the amount of identical queries that are grouped "
 #| "together. However only the SQL Text is being compared, thus the queries "
@@ -1504,9 +1503,10 @@ msgid ""
 "However only the SQL query itself has been used as a grouping criteria, so "
 "the other attributes of queries, such as start time, may differ."
 msgstr ""
-"Αυτές οι στήλες δείχνουν τον αριθμό των μοναδικών ερωτημάτων που "
-"ομαδοποιήθηκαν. Ωστόσο, μόνο το Κείμενο SQL συγκρίνεται έτσι οι ιδιότητες "
-"των ερωτημάτων όπως ο χρόνο εκκίνησης μπορεί να διαφέρουν."
+"Αυτή η στήλη δείχνουν τον αριθμό των μοναδικών ερωτημάτων που "
+"ομαδοποιήθηκαν. Ωστόσο, μόνο το ερώτημα SQL χρησιμοποιήθηκε ως κριτήριο "
+"ομαδοποίησης, έτσι οι άλλες ιδιότητες των ερωτημάτων, όπως ο χρόνος "
+"εκκίνησης, μπορεί να διαφέρουν."
 
 #: js/messages.php:166
 msgid ""
