Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:19+0200\n"
+"PO-Revision-Date: 2011-08-23 08:22+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1577,6 +1577,10 @@ msgid ""
 "This is most likely because your session expired. Reloading the page and "
 "reentering your credentials should help."
 msgstr ""
+"Κατά την αίτηση νέων δεδομένων διαγράμματος, ο διακομιστής επιστρέφει μη "
+"έγκυρη απάντηση. Αυτό συμβαίνει πιθανόν γιατί η συνεδρία σας έληξε. Η "
+"επαναφόρτωση της σελίδας και η επανεισαγωγή των διαπιστευτηρίων σας θα "
+"βοηθήσουν."
 
 #: js/messages.php:184
 #, fuzzy
