--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:25+0200\n"
+"PO-Revision-Date: 2011-08-23 08:26+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1617,10 +1617,9 @@ msgid "Analyse Query"
 msgstr "Ανάλυση Ερωτήματος"
 
 #: js/messages.php:196
-#, fuzzy
 #| msgid "Apply a divisor"
 msgid "Advisor system"
-msgstr "Εφαρμογή διαιρέτη"
+msgstr "Σύστημα σύμβουλου"
 
 #: js/messages.php:197
 msgid "Possible performance issues"
