--- a/po/el.po
+++ b/po/el.po
@@ -1630,10 +1630,9 @@ msgid "Issue"
 msgstr "Θέμα"
 
 #: js/messages.php:199
-#, fuzzy
 #| msgid "Documentation"
 msgid "Recommendation"
-msgstr "Τεκμηρίωση"
+msgstr "Πρόταση"
 
 #: js/messages.php:200
 #, fuzzy
