--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:31+0200\n"
+"PO-Revision-Date: 2011-08-23 08:32+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1819,6 +1819,8 @@ msgstr ""
 #: js/messages.php:274
 msgid "Click a data point to view and possibly edit the data row."
 msgstr ""
+"Πατήστε ένα σημείο δεδομένων για να δείτε και πιθανά να επεξεργαστείτε τη "
+"γραμμή δεδομένων."
 
 #: js/messages.php:276
 msgid "The plot can be resized by dragging it along the bottom right corner."
