--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 08:32+0200\n"
+"PO-Revision-Date: 2011-08-23 08:33+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1825,6 +1825,7 @@ msgstr ""
 #: js/messages.php:276
 msgid "The plot can be resized by dragging it along the bottom right corner."
 msgstr ""
+"Ο χώρος εργασίας μπορεί να αλλάξει μέγεθος σύρωντας την κάτω δεξιά γωνία."
 
 #: js/messages.php:278
 msgid "Strings are converted into integer for plotting"
