--- a/po/ta.po
+++ b/po/ta.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-20 08:37+0200\n"
-"Last-Translator:  <ysajeepan@live.com>\n"
+"PO-Revision-Date: 2011-08-23 10:00+0200\n"
+"Last-Translator: Sajeepan Yogenthiran <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
 "MIME-Version: 1.0\n"
@@ -645,7 +645,7 @@ msgstr ""
 #: server_databases.php:264 server_privileges.php:1751 tbl_structure.php:554
 #: tbl_structure.php:563
 msgid "With selected:"
-msgstr "உடன் தெரிவுசெய்யப்பட்டது"
+msgstr "உடன் தெரிவுசெய்யப்பட்டது:"
 
 #: db_structure.php:481 libraries/display_tbl.lib.php:2374
 #: server_databases.php:261 server_privileges.php:671
