--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-22 14:48+0200\n"
-"PO-Revision-Date: 2011-08-23 10:02+0200\n"
+"PO-Revision-Date: 2011-08-23 10:03+0200\n"
 "Last-Translator: Sajeepan Yogenthiran <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -801,7 +801,7 @@ msgstr "அட்டவணைத் தடம்"
 
 #: db_tracking.php:229
 msgid "Database Log"
-msgstr ""
+msgstr "தரவுத்தளப்பதிகை"
 
 #: enum_editor.php:21 libraries/tbl_properties.inc.php:759
 #, php-format
